--- a/GpmlGo/.classpath
+++ b/GpmlGo/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
 	<classpathentry kind="lib" path="lib/pathvisio.jar"/>
 	<classpathentry kind="lib" path="lib/resources.jar"/>
+	<classpathentry kind="lib" path="lib/google-collect-snapshot-20090211.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
