--- a/trunk/GpmlGo/.classpath
+++ b/trunk/GpmlGo/.classpath
@@ -5,12 +5,24 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="/home/thomas/code/googlerepo/lib-shared/args4j-2.0.10.jar"/>
-	<classpathentry kind="lib" path="lib/bridgedb-bio.jar"/>
-	<classpathentry kind="lib" path="lib/bridgedb.jar"/>
 	<classpathentry kind="lib" path="lib/derby.jar"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
 	<classpathentry kind="lib" path="lib/pathvisio.jar"/>
 	<classpathentry kind="lib" path="lib/resources.jar"/>
 	<classpathentry kind="lib" path="lib/google-collect-snapshot-20090211.jar"/>
+	<classpathentry kind="lib" path="lib/args4j-2.0.10.jar"/>
+	<classpathentry kind="lib" path="lib/axis-ant.jar"/>
+	<classpathentry kind="lib" path="lib/axis.jar"/>
+	<classpathentry kind="lib" path="lib/commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="lib/org.bridgedb.bio.jar"/>
+	<classpathentry kind="lib" path="lib/org.bridgedb.jar"/>
+	<classpathentry kind="lib" path="lib/org.bridgedb.rdb.jar"/>
+	<classpathentry kind="lib" path="lib/org.bridgedb.webservice.bridgerest.jar"/>
+	<classpathentry kind="lib" path="lib/saaj.jar"/>
+	<classpathentry kind="lib" path="lib/wikipathways-client.jar"/>
+	<classpathentry kind="lib" path="lib/wsdl4j-1.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
